Squashed commit of the following:
commit fd006123400f16474a28c25e485fbbde1eb8ef9a
Author: Gaudi <Gaudiwen@outlook.com>
Date:   Wed Oct 17 14:10:07 2018 +0800

    add all

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,4 +30,7 @@
         <item name="android:backgroundDimEnabled">true</item>
         <item name="android:backgroundDimAmount">0.6</item>
     </style>
+
+    <dimen name="dp_1">0.9dp</dimen>
+    <dimen name="dp_2">1.8dp</dimen>
 </resources>
