--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,48 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:zhusp="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.zhusp.androiddemo.views.DropdownLayout
-        android:id="@+id/dropdown_layout"
+    <RelativeLayout
+        android:id="@+id/ly_top_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        zhusp:dropSpeed="300">
+        android:layout_height="48dp"
+        android:background="#333333">
 
-        <LinearLayout
-            android:id="@+id/top_bar"
+        <TextView
+            android:id="@+id/tv_name"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:background="@color/colorAccent"
-            android:gravity="center_vertical|right">
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:gravity="center"
+            android:text="广东谷通科技"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="10dp"
-                android:onClick="onClick"
-                android:text="点击控制" />
-        </LinearLayout>
+        <ImageView
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:id="@+id/img_change"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/change"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:background="@color/colorPrimary"
-                android:gravity="center"
-                android:orientation="vertical">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/app_name"
-                    android:textColor="#ffffff"/>
-            </LinearLayout>
+            />
 
-        </LinearLayout>
-    </com.zhusp.androiddemo.views.DropdownLayout>
+
+    </RelativeLayout>
+
+    <GridView
+        android:layout_below="@+id/ly_top_bar"
+        android:background="@color/white"
+        android:verticalSpacing="@dimen/dp_1"
+        android:horizontalSpacing="@dimen/dp_1"
+        android:id="@+id/gird"
+        android:numColumns="2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </GridView>
+
 
 </RelativeLayout>
