--- a/app/src/main/res/layout/item_gird_icon.xml
+++ b/app/src/main/res/layout/item_gird_icon.xml
@@ -1,8 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="80dp"
-    android:layout_height="80dp"
-    android:background="@color/colorPrimary"
-    android:padding="5dp">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="152dp"
+    android:layout_height="152dp"
+    android:layout_gravity="center"
+    android:orientation="vertical"
+    android:background="@drawable/yuanjiao">
 
-</RelativeLayout>
+    <ImageView
+        android:id="@+id/img"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="30dp"
+        android:layout_gravity="center"
+        android:src="@mipmap/change" />
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:layout_gravity="center"
+        android:textColor="#FFF"
+        android:text="文字"
+        />
+
+</LinearLayout>
